--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,48 @@
 ---
 ---
+@ARTICLE{10790925,
+  author={Jeon, Mingu and Cho, Jae-Kyung and Kim, Hee-Yeun and Park, Byeonggyu and Seo, Seung-Woo and Kim, Seong-Woo},
+  journal={IEEE Transactions on Intelligent Transportation Systems}, 
+  title={Non-Line-of-Sight Vehicle Localization Based on Sound}, 
+  year={2025},
+  volume={26},
+  number={2},
+  pages={2321-2338},
+  keywords={Location awareness;Sensors;Acoustics;Cameras;Autonomous vehicles;Reflection;Particle filters;Vehicle-to-everything;Vehicle dynamics;Sonar;Intelligent vehicles;non-line-of-sight detection;particle filter;sound source localization},
+  doi={10.1109/TITS.2024.3510582}}
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@INPROCEEDINGS{11246930,
+  author={Kim, Hee-Yeun and Park, Byeonggyu and Choi, Byonghyok and Cho, Hansang and Kim, Byungkwan and Lee, Soomok and Jeon, Mingu and Seo, Seung-Woo and Kim, Seong-Woo},
+  booktitle={2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
+  title={Radar-Based NLoS Pedestrian Localization for Darting-Out Scenarios Near Parked Vehicles with Camera-Assisted Point Cloud Interpretation}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={21352-21359},
+  keywords={Location awareness;Point cloud compression;Pedestrians;Accuracy;Spaceborne radar;Radar imaging;Cameras;Road safety;Reflection;Vehicle dynamics;2D radar point cloud;darting out;monocular depth estimation;non-line-of-sight;parked vehicle},
+  doi={10.1109/IROS60139.2025.11246930}}
+
+
+@misc{park2025mmwaveradarbasednonlineofsightpedestrian,
+      title={mmWave Radar-Based Non-Line-of-Sight Pedestrian Localization at T-Junctions Utilizing Road Layout Extraction via Camera}, 
+      author={Byeonggyu Park and Hee-Yeun Kim and Byonghyok Choi and Hansang Cho and Byungkwan Kim and Soomok Lee and Mingu Jeon and Seong-Woo Kim},
+      year={2025},
+      eprint={2508.02348},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2508.02348}, 
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
+@INPROCEEDINGS{11097630,
+  author={Jeon, Mingu and Park, Byeonggyu and Kim, Hee-Yeun and Kang, Yujeong and Choi, Byonghyok and Cho, Hansang and Kim, Byungkwan and Lee, Soomok and Seo, Seung-Woo and Kim, Seong-Woo},
+  booktitle={2025 IEEE Intelligent Vehicles Symposium (IV)}, 
+  title={Non-Line-of-Sight Multi-Target Localization in T-Junctions Using Ray Tracing of mmWave Radar}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={1779-1786},
+  keywords={Point cloud compression;Location awareness;Pedestrians;Noise;Urban areas;Radar;Ray tracing;Reflection;Vehicle dynamics;Millimeter wave communication;2D radar point cloud;collision avoidance;mm Wave radar;multi-target localization;non-line-of-sight},
+  doi={10.1109/IV64158.2025.11097630}}
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
