Update publications and selected papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,48 +1,40 @@
----
----
-@ARTICLE{10790925,
-  author={Jeon, Mingu and Cho, Jae-Kyung and Kim, Hee-Yeun and Park, Byeonggyu and Seo, Seung-Woo and Kim, Seong-Woo},
-  journal={IEEE Transactions on Intelligent Transportation Systems}, 
-  title={Non-Line-of-Sight Vehicle Localization Based on Sound}, 
-  year={2025},
-  volume={26},
-  number={2},
-  pages={2321-2338},
-  keywords={Location awareness;Sensors;Acoustics;Cameras;Autonomous vehicles;Reflection;Particle filters;Vehicle-to-everything;Vehicle dynamics;Sonar;Intelligent vehicles;non-line-of-sight detection;particle filter;sound source localization},
-  doi={10.1109/TITS.2024.3510582}}
-
-
-@INPROCEEDINGS{11246930,
-  author={Kim, Hee-Yeun and Park, Byeonggyu and Choi, Byonghyok and Cho, Hansang and Kim, Byungkwan and Lee, Soomok and Jeon, Mingu and Seo, Seung-Woo and Kim, Seong-Woo},
-  booktitle={2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)}, 
-  title={Radar-Based NLoS Pedestrian Localization for Darting-Out Scenarios Near Parked Vehicles with Camera-Assisted Point Cloud Interpretation}, 
-  year={2025},
-  volume={},
-  number={},
-  pages={21352-21359},
-  keywords={Location awareness;Point cloud compression;Pedestrians;Accuracy;Spaceborne radar;Radar imaging;Cameras;Road safety;Reflection;Vehicle dynamics;2D radar point cloud;darting out;monocular depth estimation;non-line-of-sight;parked vehicle},
-  doi={10.1109/IROS60139.2025.11246930}}
-
-
-@misc{park2025mmwaveradarbasednonlineofsightpedestrian,
-      title={mmWave Radar-Based Non-Line-of-Sight Pedestrian Localization at T-Junctions Utilizing Road Layout Extraction via Camera}, 
-      author={Byeonggyu Park and Hee-Yeun Kim and Byonghyok Choi and Hansang Cho and Byungkwan Kim and Soomok Lee and Mingu Jeon and Seong-Woo Kim},
-      year={2025},
-      eprint={2508.02348},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2508.02348}, 
+@article{jeon2025nlos_sound,
+  author    = {Jeon, Mingu and Cho, Jae-Kyung and Kim, Hee-Yeun and Park, Byeonggyu and Seo, Seung-Woo and Kim, Seong-Woo},
+  journal   = {IEEE Transactions on Intelligent Transportation Systems},
+  title     = {Non-Line-of-Sight Vehicle Localization Based on Sound},
+  year      = {2025},
+  volume    = {26},
+  number    = {2},
+  pages     = {2321--2338},
+  doi       = {10.1109/TITS.2024.3510582},
+  selected  = {true}
 }
 
-@INPROCEEDINGS{11097630,
-  author={Jeon, Mingu and Park, Byeonggyu and Kim, Hee-Yeun and Kang, Yujeong and Choi, Byonghyok and Cho, Hansang and Kim, Byungkwan and Lee, Soomok and Seo, Seung-Woo and Kim, Seong-Woo},
-  booktitle={2025 IEEE Intelligent Vehicles Symposium (IV)}, 
-  title={Non-Line-of-Sight Multi-Target Localization in T-Junctions Using Ray Tracing of mmWave Radar}, 
-  year={2025},
-  volume={},
-  number={},
-  pages={1779-1786},
-  keywords={Point cloud compression;Location awareness;Pedestrians;Noise;Urban areas;Radar;Ray tracing;Reflection;Vehicle dynamics;Millimeter wave communication;2D radar point cloud;collision avoidance;mm Wave radar;multi-target localization;non-line-of-sight},
-  doi={10.1109/IV64158.2025.11097630}}
+@inproceedings{kim2025iros_radar_nlos,
+  author    = {Kim, Hee-Yeun and Park, Byeonggyu and Choi, Byonghyok and Cho, Hansang and Kim, Byungkwan and Lee, Soomok and Jeon, Mingu and Seo, Seung-Woo and Kim, Seong-Woo},
+  booktitle = {2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  title     = {Radar-Based NLoS Pedestrian Localization for Darting-Out Scenarios Near Parked Vehicles with Camera-Assisted Point Cloud Interpretation},
+  year      = {2025},
+  pages     = {21352--21359},
+  doi       = {10.1109/IROS60139.2025.11246930},
+  selected  = {true}
+}
 
+@inproceedings{jeon2025iv_raytracing,
+  author    = {Jeon, Mingu and Park, Byeonggyu and Kim, Hee-Yeun and Kang, Yujeong and Choi, Byonghyok and Cho, Hansang and Kim, Byungkwan and Lee, Soomok and Seo, Seung-Woo and Kim, Seong-Woo},
+  booktitle = {2025 IEEE Intelligent Vehicles Symposium (IV)},
+  title     = {Non-Line-of-Sight Multi-Target Localization in T-Junctions Using Ray Tracing of mmWave Radar},
+  year      = {2025},
+  pages     = {1779--1786},
+  doi       = {10.1109/IV64158.2025.11097630}
+}
 
+@misc{park2025mmwave_nlos_arxiv,
+  title        = {mmWave Radar-Based Non-Line-of-Sight Pedestrian Localization at T-Junctions Utilizing Road Layout Extraction via Camera},
+  author       = {Park, Byeonggyu and Kim, Hee-Yeun and Choi, Byonghyok and Cho, Hansang and Kim, Byungkwan and Lee, Soomok and Jeon, Mingu and Kim, Seong-Woo},
+  year         = {2025},
+  eprint       = {2508.02348},
+  archivePrefix= {arXiv},
+  primaryClass = {cs.CV},
+  url          = {https://arxiv.org/abs/2508.02348}
+}
